Extract native IR builder to pascal.taie.ir